--- a/app/views/latest/informant/informant-triage/06-check.html
+++ b/app/views/latest/informant/informant-triage/06-check.html
@@ -98,7 +98,7 @@
 
     </dl>
 
-      <form action="/latest/whose-details-form" method="post" novalidate>
+      <form action="../task-list" method="post" novalidate>
 
         {{ govukButton({
           text: "Continue"
