--- a/app/views/latest/informant/supporting-info/prepare-for-appointment.html
+++ b/app/views/latest/informant/supporting-info/prepare-for-appointment.html
@@ -21,7 +21,7 @@
         <div class="govuk-grid-column-two-thirds">
   
           <h1 class="govuk-heading-l">
-            Prepare for appointment
+            Prepare for registration
           </h1>
   
     
