--- a/app/views/latest/02-pending-registrations-v1.html
+++ b/app/views/latest/02-pending-registrations-v1.html
@@ -19,30 +19,22 @@
       <div class="govuk-grid-column-three-quarters govuk-!-margin-bottom-7">
 
         <h1 class="govuk-heading-l">
-          Stillbirths
+          Pending stillbirth registrations
         </h1>
-
-      </div>
-      <div>
-           
-    <div class="govuk-grid-column-one-quarter">
-      {% from "govuk/components/button/macro.njk" import govukButton %}
-{{ govukButton({
-  text: "Create registration",
-  href: "02b-notifications" 
-}) }}
-    </div>
-
+<p>Outstanding NHS stillbirth notifications and saved pending records.</p>
+<p>If you cannot find the record you need, <a href="#">search all notifications</a>.</p>
       </div>
 
     </div>
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-full">
+<h2 class="govuk-heading-m">
+          Select a stillbirth to continue
+        </h2>
 
-
-<!--      
- <table class="govuk-table govuk-table--small-text-until-tablet pending-table">
+     
+<table class="govuk-table govuk-table--small-text-until-tablet pending-table">
   <caption class="govuk-table__caption govuk-table__caption--m govuk-visually-hidden">Pending registrations</caption>
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
@@ -139,64 +131,20 @@
     </tr>
   </tbody>
 </table>
- -->
-<h2 class="govuk-heading-m">Pending registrations</h2>
-
-<table class="govuk-table govuk-table--small-text-until-tablet pending-table">
-  <caption class="govuk-table__caption govuk-table__caption--m govuk-visually-hidden">Pending registrations</caption>
-  <thead class="govuk-table__head">
-    <tr class="govuk-table__row">
-      <th scope="col" class="govuk-table__header" style="padding-top: 10px;">NHS number</th>
-      <th scope="col" class="govuk-table__header">Mother's name</th>
-      <th scope="col" class="govuk-table__header">Date and time<br>of stillbirth</th>
-      <th scope="col" class="govuk-table__header">Sex</th>
-      <th scope="col" class="govuk-table__header">Place of stillbirth</th>
-      <th scope="col" class="govuk-table__header">Stage</th>
-    </tr>
-  </thead>
-  <tbody class="govuk-table__body">
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell" style="white-space: nowrap; padding-top: 15px;"><a href="#" class="govuk-link govuk-body-svuk-table__cell" >390 446 7891</a></td>
-      <td class="govuk-table__cell">BANACH, Emily</td>
-      <td class="govuk-table__cell">22/06/2025<br>22:30</td>
-      <td class="govuk-table__cell">Male</td>
-      <td class="govuk-table__cell">Central Hospital</td>
-      <td class="govuk-table__cell govuk-body-s">Preparation<br>information entered</td>
-    </tr>
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell" style="white-space: nowrap; padding-top: 15px;"><a href="#" class="govuk-link govuk-body-svuk-table__cell">390 123 4567</a></td>
-      <td class="govuk-table__cell">SHORT, Celine</td>
-      <td class="govuk-table__cell">06/07/2025<br>05:46</td>
-      <td class="govuk-table__cell">Female</td>
-      <td class="govuk-table__cell">Queen Mary’s Hospital</td>
-      <td class="govuk-table__cell govuk-body-s">Medical information<br>entered</td>
-    </tr>
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell" style="white-space: nowrap; padding-top: 15px;"><a href="#" class="govuk-link govuk-body-svuk-table__cell">390 123 4567</a></td>
-      <td class="govuk-table__cell">HUSEIN, Lila</td>
-      <td class="govuk-table__cell">15/07/2025<br>10:30</td>
-      <td class="govuk-table__cell">Male</td>
-      <td class="govuk-table__cell">Royal Free Hospital</td>
-      <td class="govuk-table__cell govuk-body-s">Medical information<br>entered</td>
-    </tr>
-    <tr class="govuk-table__row">
-      <td class="govuk-table__cell" style="white-space: nowrap; padding-top: 15px;"><a href="#" class="govuk-link govuk-body-svuk-table__cell">390 987 6543</a></td>
-      <td class="govuk-table__cell">SMITH, Olivia</td>
-      <td class="govuk-table__cell">01/08/2025<br>14:15</td>
-      <td class="govuk-table__cell">Female</td>
-      <td class="govuk-table__cell">St. Mary’s Hospital</td>
-      <td class="govuk-table__cell govuk-body-s">Medical information<br>entered</td>
-    </tr>
-  
-  </tbody>
-</table>
-
-
 
       </div>
     </div>
 
+    <div class="govuk-grid-row">
+    <div class="govuk-grid-column-three-quarters">
+      {% from "govuk/components/button/macro.njk" import govukButton %}
 
+{{ govukButton({
+  text: "Continue"
+}) }}
+    </div>
+
+</div>
 </form>
 
 {% endblock %}
