--- a/app/views/latest/no-informant/cause-of-death/coroner-details.html
+++ b/app/views/latest/no-informant/cause-of-death/coroner-details.html
@@ -24,7 +24,7 @@ href: "javascript:window.history.back()"
 
     <form class="form" action="/latest/no-informant/coroner-details-form" method="post">
 
-     
+
 
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
@@ -58,36 +58,43 @@ href: "javascript:window.history.back()"
             </fieldset>
           </div>
           <div class="govuk-form-group"><label class="govuk-label govuk-!-font-weight-bold" for="coronerName_input">Full
-              name</label><input id="coronerName_input" name="coronerName" class="govuk-input govuk-input--width-20"
-              autocomplete="off" value=""></div>
-          <div class="govuk-form-group"><label class="govuk-label govuk-!-font-weight-bold"
-              for="coronerDistrict_input">District</label><input id="coronerDistrict_input" name="coronerDistrict"
+              name</label><input id="coronerName_input" name="coronerName_input"
               class="govuk-input govuk-input--width-20" autocomplete="off" value=""></div>
           <div class="govuk-form-group"><label class="govuk-label govuk-!-font-weight-bold"
-              for="coronerArea_input">Area</label><input id="coronerArea_input" name="coronerArea"
+              for="coronerDistrict_input">District</label><input id="coronerDistrict_input" name="coronerDistrict_input"
+              class="govuk-input govuk-input--width-20" autocomplete="off" value=""></div>
+          <div class="govuk-form-group"><label class="govuk-label govuk-!-font-weight-bold"
+              for="coronerArea_input">Area</label><input id="coronerArea_input" name="coronerArea_input"
               class="govuk-input govuk-input--width-20" autocomplete="off" value=""></div>
           <h2 class="govuk-heading-s">Designation</h2>
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset">
               <div class="govuk-radios">
-                <div class="govuk-radios__item"><input class="govuk-radios__input" type="radio"
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" type="radio"
                     id="coronerDesignation-1" name="coronerDesignation" value="Assistant Coroner"><label
-                    class="govuk-label govuk-radios__label" for="coronerDesignation-1">Assistant Coroner</label></div>
+                    class="govuk-label govuk-radios__label" for="coronerDesignation-1">Assistant Coroner</label>
+                  </div>
                 <div class="govuk-radios__item"><input class="govuk-radios__input" type="radio"
                     id="coronerDesignation-2" name="coronerDesignation" value="Senior Coroner"><label
-                    class="govuk-label govuk-radios__label" for="coronerDesignation-2">Senior Coroner</label></div>
+                    class="govuk-label govuk-radios__label" for="coronerDesignation-2">Senior Coroner</label>
+                  </div>
                 <div class="govuk-radios__item"><input class="govuk-radios__input" type="radio"
                     id="coronerDesignation-3" name="coronerDesignation" value="Deputy Coroner"><label
-                    class="govuk-label govuk-radios__label" for="coronerDesignation-3">Deputy Coroner</label></div>
+                    class="govuk-label govuk-radios__label" for="coronerDesignation-3">Deputy Coroner</label>
+                  </div>
                 <div class="govuk-radios__item"><input class="govuk-radios__input" type="radio"
                     id="coronerDesignation-4" name="coronerDesignation" value="Area Coroner"><label
-                    class="govuk-label govuk-radios__label" for="coronerDesignation-4">Area Coroner</label></div>
+                    class="govuk-label govuk-radios__label" for="coronerDesignation-4">Area Coroner</label>
+                  </div>
                 <div class="govuk-radios__item"><input class="govuk-radios__input" type="radio"
                     id="coronerDesignation-5" name="coronerDesignation" value="Coroner"><label
-                    class="govuk-label govuk-radios__label" for="coronerDesignation-5">Coroner</label></div>
+                    class="govuk-label govuk-radios__label" for="coronerDesignation-5">Coroner</label>
+                  </div>
                 <div class="govuk-radios__item"><input class="govuk-radios__input" type="radio"
                     id="coronerDesignation-6" name="coronerDesignation" value="Other"><label
-                    class="govuk-label govuk-radios__label" for="coronerDesignation-6">Other</label></div>
+                    class="govuk-label govuk-radios__label" for="coronerDesignation-6">Other</label>
+                  </div>
               </div>
             </fieldset>
           </div>
@@ -98,7 +105,7 @@ href: "javascript:window.history.back()"
 
 
 
-      
+
 
 
       {{ govukButton({
