simplified flow to follow births

--- a/app/views/01-life-event-home.html
+++ b/app/views/01-life-event-home.html
@@ -51,9 +51,9 @@
 <h2 class="govuk-heading-m">Births</h2>
       
         <ul class="govuk-list">
-          <li><a class="govuk-link" href="#">Register a birth</a>
+          <li><a class="govuk-link" href="latest/02-search.html">Register a birth</a>
           </li>
-          <li><a class="govuk-link" href="latest/02-pending-registrations.html">Register a stillbirth or view pending</a>
+          <li><a class="govuk-link" href="#">Re-register a birth</a>
           </li>
         </ul>
         
