--- a/app/views/latest-2tier-triage/informant/informant-triage/05-check.html
+++ b/app/views/latest-2tier-triage/informant/informant-triage/05-check.html
@@ -96,7 +96,7 @@ href: "javascript:window.history.back()"
     <form action="/latest/informant/whose-details-form" method="post" novalidate>
 
       {{ govukButton({
-      text: "Create record"
+      text: "Continue"
       }) }}
 
     </form>
