--- a/app/views/latest-2tier-triage/no-informant/informant-triage/05-check.html
+++ b/app/views/latest-2tier-triage/no-informant/informant-triage/05-check.html
@@ -26,7 +26,7 @@ href: "javascript:window.history.back()"
         </dt>
         <dd class="govuk-summary-list__value">
           {% set whoIsInformantText = {
-          "mother": "Mother",
+          "mother": "Motherr",
           "father": "Father",
           "secondParent": "Second parent",
           "motherAndFather": "Mother and father",
@@ -93,10 +93,10 @@ href: "javascript:window.history.back()"
     </dl>
 
 
-    <form action="/latest/informant/whose-details-form" method="post" novalidate>
+    <form action="/latest/no-informant/whose-details-form" method="post" novalidate>
 
       {{ govukButton({
-      text: "Create record"
+      text: "Continue"
       }) }}
 
     </form>
