--- a/app/views/latest-2tier-triage/no-informant/informant-triage/06-check.html
+++ b/app/views/latest-2tier-triage/no-informant/informant-triage/06-check.html
@@ -1,32 +1,38 @@
 {% extends "layouts/main.html" %}
 
 {% block pageTitle %}
-Check your answers template – {{ serviceName }} – GOV.UK Prototype Kit
+  Check your answers template – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
 {% block beforeContent %}
-{{ govukBackLink({
-text: "Back",
-href: "javascript:window.history.back()"
-}) }}
+  {{ govukBackLink({
+    text: "Back to record",
+    href: "javascript:window.history.back()"
+  }) }}
 {% endblock %}
 
 {% block content %}
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds-from-desktop">
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds-from-desktop">
 
-    <h1 class="govuk-heading-l">
-      Check record details
-    </h1>
+      <h1 class="govuk-heading-l">
+        Check record details
+      </h1>
 
-    <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+ {% from "govuk/components/inset-text/macro.njk" import govukInsetText %}
+
+{{ govukInsetText({
+  text: "You cannot edit these details. You need to start a new registration and delete this one, if they are not correct."
+}) }}
+      
+ <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">
           Informant
         </dt>
         <dd class="govuk-summary-list__value">
           {% set whoIsInformantText = {
-          "mother": "Mother",
+          "mother": "Motherr",
           "father": "Father",
           "secondParent": "Second parent",
           "motherAndFather": "Mother and father",
@@ -36,8 +42,8 @@ href: "javascript:window.history.back()"
           {{ whoIsInformantText[data['whoIsInformant']] or "Mother" }}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="01-who-is-informant">Change<span class="govuk-visually-hidden"> date of
-              birth</span></a>
+          <!-- <a class="govuk-link" href="01-who-is-informant">Change<span class="govuk-visually-hidden"> date of
+              birth</span></a> -->
         </dd>
       </div>
       <div class="govuk-summary-list__row">
@@ -53,8 +59,8 @@ href: "javascript:window.history.back()"
           {{ whatEvidenceText[data['whatEvidence']] or "Evidence of informant identity seen" }}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="02-evidence">Change<span class="govuk-visually-hidden"> customer
-              reference</span></a>
+          <!-- <a class="govuk-link" href="02-evidence">Change<span class="govuk-visually-hidden"> customer
+              reference</span></a> -->
         </dd>
       </div>
       <div class="govuk-summary-list__row">
@@ -70,8 +76,8 @@ href: "javascript:window.history.back()"
           {{ marriedOrCivilPartnershipText[data['marriedOrCivilPartnership']] or "Married" }}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="03-married">Change<span class="govuk-visually-hidden"> customer
-              reference</span></a>
+          <!-- <a class="govuk-link" href="03-married">Change<span class="govuk-visually-hidden"> customer
+              reference</span></a> -->
         </dd>
       </div>
       <div class="govuk-summary-list__row">
@@ -86,23 +92,22 @@ href: "javascript:window.history.back()"
           {{ whoElseDetailsText[data['whoElseDetails']] or "Father" }}
         </dd>
         <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="04-who-else">Change<span class="govuk-visually-hidden"> address</span></a>
+          <!-- <a class="govuk-link" href="04-who-else">Change<span class="govuk-visually-hidden"> address</span></a> -->
         </dd>
       </div>
 
     </dl>
 
+      <form action="/latest/no-informant/whose-details-form" method="post" novalidate>
 
-    <form action="/latest/informant/whose-details-form" method="post" novalidate>
+        {{ govukButton({
+          text: "Continue"
+        }) }}
 
-      {{ govukButton({
-      text: "Create record"
-      }) }}
+      </form>
 
-    </form>
-
+    </div>
   </div>
-</div>
 
 
 {% endblock %}
