--- a/app/views/latest-2tier-triage/informant/task-list-v1.html
+++ b/app/views/latest-2tier-triage/informant/task-list-v1.html
@@ -4,7 +4,6 @@
 Task list template – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
-
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {% block content %}
@@ -12,23 +11,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">Stillbirth registration</h1>
 
-     <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Informant type</h2>
-
-      <ul class="govuk-task-list">
-      <li class="govuk-task-list__item">
-        <div class="govuk-task-list__name-and-hint govuk-!-width-two-thirds">
-          <a class="govuk-link govuk-task-list__link" href="informant-triage/06-check">
-            Informant type
-          </a>
-        </div>
-        <div class="govuk-task-list__status">
-          Completed
-
-        </div>
-      </li>
-    </ul>
-
-    <!-- <h2 class="govuk-heading-m">Supporting information (optional)</h2>
+    <h2 class="govuk-heading-m">Supporting information (optional)</h2>
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -44,7 +27,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           {% endif %}
 
         </div>
-      </li> -->
+      </li>
 
       <!-- <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -74,15 +57,33 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           
           {% endif %}
         </div>
-      </li> 
-    </ul>-->
+      </li> -->
+    </ul>
 
     <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Source of medical information</h2>
    
 
 
 <ul class="govuk-task-list">
+  <!-- <li class="govuk-task-list__item">
+    <div class="govuk-task-list__name-and-hint">
 
+
+ {% if data.userMedicalInfoSource == "1-informant" %}
+  Medical certificate of stillbirth (form 34)
+{% elif data.userMedicalInfoSource == "4-informant" %}
+  There was no medical professional involved (form 35)
+  {% elif data.userPostMortemDetail == "2-with-inf" %}
+    Coroner's post-mortem with informant (CN2)
+{% else %}
+   Medical certificate of stillbirth (form-34)
+{% endif %}
+      
+    </div>
+    <div class="govuk-task-list__status">
+      Completed
+    </div>
+  </li> -->
 
    {% if data.userMedicalInfoSource == "1-informant" %}
       <li class="govuk-task-list__item">
@@ -99,7 +100,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           {% endif %}
         </div>
       </li>
-      {% elif data.userMedicalInfoSource == "2-cn2-with-inf" %}
+      {% elif data.userPostMortemDetail == "2-with-inf" %}
 
       {% endif %}
 
@@ -122,7 +123,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
 
         {% if data.userMedicalInfoSource == "1-informant" %}
 
-   {% elif data.userMedicalInfoSource == "2-cn2-with-inf" %}
+   {% elif data.userPostMortemDetail == "2-with-inf" %}
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
           <a class="govuk-link govuk-task-list__link" href="cause-of-death/coroner-details">
@@ -143,8 +144,23 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
 
     </ul>
 
-   
-    {% if not data.whoseDetailsCompleted %}
+    <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Whose details will be recorded</h2>
+
+    {% if not (data.pregCompleted and data.codCompleted) %}
+    <ul class="govuk-task-list">
+      <li class="govuk-task-list__item">
+        <div class="govuk-task-list__name-and-hint govuk-!-width-two-thirds">
+          <div class="govuk-task-list__hint ">
+            The rest of the form will become available after you complete this section.
+          </div>
+        </div>
+        <div class="govuk-task-list__status">
+          <strong class="govuk-tag govuk-tag--grey">Cannot start yet</strong>
+        </div>
+      </li>
+    </ul>
+
+    {% elif not data.whoseDetailsCompleted %}
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint govuk-!-width-two-thirds">
@@ -167,9 +183,21 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
 
     <!-- ELSE if the informant details have been complete the rest of the task list appears-->
 
-  
-  
-  {% elif data.whoseDetailsCompleted %}
+    {% elif data.whoseDetailsCompleted %}
+    <ul class="govuk-task-list">
+      <li class="govuk-task-list__item">
+        <div class="govuk-task-list__name-and-hint govuk-!-width-two-thirds">
+          <a class="govuk-link govuk-task-list__link" href="informant-triage/06-check">
+            Informant and whose details will be recorded
+          </a>
+        </div>
+        <div class="govuk-task-list__status">
+          Completed
+
+        </div>
+      </li>
+    </ul>
+
     <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Child's details</h2>
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
