--- a/app/views/latest-2tier-triage/informant/task-list.html
+++ b/app/views/latest-2tier-triage/informant/task-list.html
@@ -4,7 +4,6 @@
 Task list template – {{ serviceName }} – GOV.UK Prototype Kit
 {% endblock %}
 
-
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {% block content %}
@@ -12,23 +11,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">Stillbirth registration</h1>
 
-     <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Informant type</h2>
-
-      <ul class="govuk-task-list">
-      <li class="govuk-task-list__item">
-        <div class="govuk-task-list__name-and-hint govuk-!-width-two-thirds">
-          <a class="govuk-link govuk-task-list__link" href="informant-triage/06-check">
-            Informant type
-          </a>
-        </div>
-        <div class="govuk-task-list__status">
-          Completed
-
-        </div>
-      </li>
-    </ul>
-
-    <!-- <h2 class="govuk-heading-m">Supporting information (optional)</h2>
+    <h2 class="govuk-heading-m">Supporting information (optional)</h2>
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -44,7 +27,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           {% endif %}
 
         </div>
-      </li> -->
+      </li>
 
       <!-- <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
@@ -74,8 +57,8 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
           
           {% endif %}
         </div>
-      </li> 
-    </ul>-->
+      </li> -->
+    </ul>
 
     <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Source of medical information</h2>
    
@@ -143,7 +126,10 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
 
     </ul>
 
+    <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Whose details will be recorded</h2>
+
    
+
     {% if not data.whoseDetailsCompleted %}
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
@@ -167,9 +153,21 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
 
     <!-- ELSE if the informant details have been complete the rest of the task list appears-->
 
-  
-  
-  {% elif data.whoseDetailsCompleted %}
+    {% elif data.whoseDetailsCompleted %}
+    <ul class="govuk-task-list">
+      <li class="govuk-task-list__item">
+        <div class="govuk-task-list__name-and-hint govuk-!-width-two-thirds">
+          <a class="govuk-link govuk-task-list__link" href="informant-triage/06-check">
+            Informant and whose details will be recorded
+          </a>
+        </div>
+        <div class="govuk-task-list__status">
+          Completed
+
+        </div>
+      </li>
+    </ul>
+
     <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Child's details</h2>
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item">
