tidy up of simple flow
task list - removed supporting info
cause of death - removed check answers page for medical info and directed to task-list
who are informants - removed
registrar's comments - added back in

--- a/app/views/latest/informant/cause-of-death/pregnancy-delivery.html
+++ b/app/views/latest/informant/cause-of-death/pregnancy-delivery.html
@@ -33,7 +33,7 @@
      
       <h2 class="govuk-heading-s">Estimated length of pregnancy</h2>
 
-      <form class="form" action="cause-of-death" method="post">
+      <form class="form" action="/latest/informant/pregnancy-del-form" method="post">
 
         <div class="govuk-grid-row">
           <div class="govuk-form-group">
