--- a/app/views/latest/no-informant/task-list.html
+++ b/app/views/latest/no-informant/task-list.html
@@ -11,68 +11,7 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">Stillbirth registration</h1>
 
-    <h2 class="govuk-heading-m">Supporting information (optional)</h2>
-    <ul class="govuk-task-list">
-      <li class="govuk-task-list__item">
-        <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="supporting-info/prepare-for-appointment">
-            Prepare for registration
-          </a>
-        </div>
-        <div class="govuk-task-list__status">
-          {% if data.prepareForAppointmentNICompleted %}
-          Entered
-          {% else %}
-           
-          {% endif %}
-
-        </div>
-      </li>
-       <li class="govuk-task-list__item">
-        <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="supporting-info/comments">
-            Registrar's comments
-          </a>
-        </div>
-        <div class="govuk-task-list__status">
-          {% if data.commentsNICompleted %}
-          Entered
-          {% else %}
-          
-          {% endif %}
-        </div>
-      </li>
-
-      <!-- <li class="govuk-task-list__item">
-        <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="supporting-info/uploads">
-            Uploads
-          </a>
-        </div>
-        <div class="govuk-task-list__status">
-          {% if data.uploadsNICompleted %}
-          Entered
-          {% else %}
-           
-          {% endif %}
-        </div>
-      </li>
-
-      <li class="govuk-task-list__item">
-        <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="supporting-info/comments">
-            Comments
-          </a>
-        </div>
-        <div class="govuk-task-list__status">
-          {% if data.commentsNICompleted %}
-          Entered
-          {% else %}
-          
-          {% endif %}
-        </div>
-      </li> -->
-    </ul>
+  
 
     <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Source of medical information</h2>
     
@@ -178,7 +117,22 @@ Task list template – {{ serviceName }} – GOV.UK Prototype Kit
       </li>
     </ul>
 
-  
+   <h2 class="govuk-heading-m">Registrar's comments </h2>
+       <ul class="govuk-task-list">
+         <li class="govuk-task-list__item">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link" href="supporting-info/comments">
+            Comments</a> (optional)
+        </div>
+        <div class="govuk-task-list__status">
+          {% if data.commentsCompleted %}
+          Entered
+          {% else %}
+          
+          {% endif %}
+        </div>
+      </li>
+       </ul>
 
     <h2 class="govuk-heading-m govuk-!-margin-top-5 govuk-!-margin-bottom-1">Submit the registration</h2>
      <ul class="govuk-task-list">
